css/style.css
body,
html {
  color: #000;
  background-color: #fff;
  font-family: 'Open Sans', sans-serif;
  font-size: 15px;
  font-weight: 400; }

/*HEADER style*/
.header .navbar {
  padding: 37.5px 15px;
  font-size: 20px;
  font-weight: 600; }
.header .header-content {
  position: relative;
  min-height: 656px;
  background: url("../img/header-content__bg.jpg") center -120px no-repeat; }
  .header .header-content h1 {
    margin: 0;
    margin-bottom: 40px;
    padding-top: 185px;
    color: #fff;
    font-size: 60px;
    font-weight: 600; }
  .header .header-content p {
    margin-bottom: 110px;
    color: #fff;
    font-size: 22px; }
.header .header-content__overlay {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: rgba(0, 0, 0, 0.45); }
.header .our-services__btn,
.header .hire-now__btn {
  display: inline-block;
  width: 220px;
  padding: 20px 0;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  color: #fff;
  background-color: #00897b;
  font-size: 20px;
  font-weight: 700; }
.header .our-services__btn {
  margin-right: 30px;
  padding: 16px 0;
  border: 4px solid #fff;
  background-color: transparent; }
.header .our-services__btn:hover,
.header .hire-now__btn:hover {
  opacity: 0.8; }

.navbar-light .navbar-nav .nav-link {
  color: black; }

/*HEADER style ends*/
/*ABOUT style*/
#about {
  padding: 125px 0; }
  #about .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #about .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #about .card {
    text-align: center;
    border: none; }
  #about .card-body {
    padding: 0 15px; }
  #about .card img {
    width: 62px;
    height: 62px;
    margin: 0 auto;
    margin-bottom: 40px; }
  #about .card h3 {
    margin-bottom: 20px;
    font-size: 20px; }

/*ABOUT style ends*/
/*SERVICING style */
#servicing {
  padding: 125px 0;
  background-color: #e4fdf9; }
  #servicing .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #servicing .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #servicing .read-more__btn {
    display: inline-block;
    width: 150px;
    padding: 11px 0 10px 0;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
    border: 2px solid #000;
    font-size: 20px;
    font-weight: 600; }
  #servicing .card {
    padding: 60px 40px 50px 40px;
    border: none;
    border-radius: 0; }
    #servicing .card .servicing-icon {
      display: inline-block;
      width: 62px;
      height: 62px;
      margin-bottom: 40px;
      background-image: url("../img/smart.svg");
      background-size: cover; }
  #servicing .card:hover {
    color: #fff;
    background-color: #00897B; }
    #servicing .card:hover .read-more__btn {
      color: #fff;
      border-color: #fff; }
    #servicing .card:hover .servicing-icon {
      background-image: url("../img/smart--white.svg"); }
  #servicing .card-body {
    padding: 0; }
  #servicing .card-title {
    margin: 0;
    margin-bottom: 20px;
    font-size: 20px;
    font-weight: 600; }
  #servicing .card-text {
    margin: 0;
    margin-bottom: 40px;
    line-height: 25px; }

/*SERVICING style ends*/
/*PRICING  */
#pricing {
  padding: 125px 0;
  background-color: rgba(6, 12, 11, 0.2); }
  #pricing .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #pricing .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #pricing .order-now__btn {
    display: inline-block;
    width: 180px;
    padding: 11px 0 10px 0;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
    border: 2px solid #000;
    font-size: 20px;
    font-weight: 600; }
  #pricing .card {
    padding: 50px 20px;
    border: none;
    border-radius: 0; }
  #pricing .card-header {
    margin-bottom: 50px;
    padding: 0;
    border: none;
    background-color: transparent; }
    #pricing .card-header p {
      margin: 0;
      font-size: 25px; }
    #pricing .card-header p:last-of-type {
      font-size: 17px; }
    #pricing .card-header p:last-of-type sup {
      top: -22px;
      font-size: 100%; }
    #pricing .card-header span {
      font-size: 50px; }
  #pricing .card-body {
    padding: 0; }
  #pricing .list-group {
    margin-bottom: 65px; }
  #pricing .list-group-item {
    margin: 0 25px 35px 25px;
    padding: 0;
    font-size: 17px; }
  #pricing .list-group-item:last-child {
    margin-bottom: 0; }

/*PRICING  style ends*/
/*TEAM MEMBERS  style */
#team-members {
  padding: 125px 0; }
  #team-members .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #team-members .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #team-members .card {
    margin: 0;
    padding: 0;
    border: none; }
  #team-members .card-img-top {
    margin-bottom: 40px; }
  #team-members .card-body {
    margin: 0;
    padding: 0; }
  #team-members .card-title {
    margin-bottom: 10px; }
  #team-members .card-text {
    margin-bottom: 30px; }
  #team-members .social-list .list-link {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-align: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-box-pack: center;
        -ms-flex-pack: center;
            justify-content: center;
    width: 50px;
    height: 50px;
    border-radius: 10%;
    background-color: #f0f1f1; }
    #team-members .social-list .list-link i {
      color: #00897b; }
  #team-members .social-list .list-link:hover {
    background-color: #3949ab; }
    #team-members .social-list .list-link:hover i {
      color: #fff; }

/*TEAM MEMBERS style ends*/
/*BLOG  style */
#blog {
  padding: 125px 0;
  background-color: #e4fdf9; }
  #blog .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #blog .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #blog .blog-content {
    padding-top: 60px; }
    #blog .blog-content h5 {
      margin: 0;
      margin-bottom: 25px;
      font-size: 25px;
      font-weight: 600; }
    #blog .blog-content h5:hover {
      cursor: pointer;
      color: #00897b; }
  #blog .blog-content__data {
    margin-bottom: 20px; }
    #blog .blog-content__data span {
      display: inline-block;
      font-size: 17px;
      font-weight: 600; }
      #blog .blog-content__data span:first-child {
        margin-right: 40px; }
  #blog .more-view__btn {
    width: 220px;
    margin-top: 125px;
    padding: 11px 0 10px 0;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    color: #fff;
    background-color: #00897b;
    font-size: 20px;
    font-weight: 600; }

/*BLOG  style ends*/
/*CONTACT  style*/
#contact {
  padding: 125px 0;
  color: #fff;
  background: url("../img/contact-bg.jpg") center center no-repeat;
  background-size: cover; }
  #contact .title {
    margin: 0;
    margin-bottom: 30px;
    font-size: 30px;
    font-weight: 600; }
  #contact .text {
    margin: 0;
    margin-bottom: 125px;
    line-height: 22px; }
  #contact .card {
    margin: 0;
    padding: 0;
    text-align: center;
    border: none;
    background-color: transparent; }
  #contact .card-body {
    margin: 0;
    padding: 0;
    font-size: 20px; }
    #contact .card-body a {
      color: #fff; }
  #contact .card__img {
    width: 105px;
    height: 105px;
    margin: 0 auto;
    margin-bottom: 35px;
    border-radius: 50%; }
    #contact .card__img--pin {
      background: url("../img/contact-pin.svg") no-repeat center center #3949ab; }
    #contact .card__img--phone {
      background: url("../img/contact-phone.svg") no-repeat center center #3949ab; }
    #contact .card__img--mail {
      background: url("../img/contact-mail.svg") no-repeat center center #3949ab; }
  #contact .card-text {
    font-size: 20px;
    line-height: 28px; }
  #contact form {
    padding-top: 80px; }
    #contact form .form-control {
      padding: 35px 25px;
      color: rgba(33, 33, 33, 0.8);
      border-radius: 10px;
      font-size: 20px;
      font-weight: 600; }
    #contact form textarea {
      min-height: 320px;
      margin-bottom: 40px;
      resize: none; }
  #contact .submit__btn {
    display: inline-block;
    width: 220px;
    padding: 11px 0 10px 0;
    text-align: center;
    text-decoration: none;
    text-transform: uppercase;
    color: #000;
    border-radius: 10px;
    background-color: #fff;
    font-size: 20px;
    font-weight: 600; }

/*CONTACT  style ends*/
/*FOOTER  style */
.footer {
  padding: 23px 0 22px 0;
  font-size: 20px; }

/*FOOTER  style ends*/
/*MEDIA HEADER queries*/
@media (max-width: 767.98px) {
  .header .nav-btn {
    position: absolute;
    top: 50%;
    right: 0;
    display: block;
    width: 40px;
    height: 40px;
    margin: 0;
    padding: 0;
    cursor: pointer;
    -webkit-transform: translateY(-20px);
            transform: translateY(-20px);
    border: none;
    outline: none;
    background-color: transparent; }
    .header .nav-btn .nav-btn__icon:hover path {
      fill: rgba(0, 0, 0, 0.6); }
  .header .header-content h1 {
    font-size: 40PX; }

  #about .card {
    margin-bottom: 50px; } }
@media (max-width: 575.98px) {
  .header .header-content h1 {
    padding-top: 50px;
    font-size: 40px; }
  .header .header-content p {
    margin-bottom: 70px;
    font-size: 20px;
    line-height: 33px; }
  .header .our-services__btn {
    width: 100%;
    margin-right: none;
    margin-bottom: 15px; }
  .header .hire-now__btn {
    width: 100%; } }
/*MEDIA HEADER queries ends*/

